--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <body>
 <div>
+    <div class="title-text" style="text-align: center; color: #e78a3a">
+        <h1>Dù là chuyện vui hay buồn cũng là chất liệu để trưởng thành mà. Chỉ có bản thân mới vượt qua được thôi, cố lên nhé. Anh quay lại công việc đây nhưng để lại chú sóc nhỏ em thử bấm vào bụng sóc xem sao</h1>
+        <p>Nhấn vào chú sóc để bật nhạc nhé 🎵</p>
+    </div>
     <div class='squirrel'>
         <div class='s1'></div>
         <div class='s2' id="music-toggle-2"></div>
@@ -74,9 +78,9 @@
     </div>
 </div>
 
-<audio id="audio" src="./music/모던한 카페에서 나오는 고급스러운 피아노 음악 l GRASS COTTON+.mp3"></audio>
-<audio id="audio1" src="./music/goblin-ost-crush-piano-cover-by-riyandi-kusuma.mp3"></audio>
-<audio id="audio2" src="./music/hoa-ost.mp3"></audio>
+<!--<audio id="audio" src="./music/모던한 카페에서 나오는 고급스러운 피아노 음악 l GRASS COTTON+.mp3"></audio>-->
+<!--<audio id="audio1" src="./music/goblin-ost-crush-piano-cover-by-riyandi-kusuma.mp3"></audio>-->
+<audio id="audio2" src="./music/justatee--official-music-video_[cut_87sec].mp3"></audio>
 
 </body>
 
