--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div>
     <div class="title-text" style="text-align: center; color: #e78a3a">
-        <h1>Dù là chuyện vui hay buồn cũng là chất liệu để trưởng thành mà. Chỉ có bản thân mới vượt qua được thôi, cố lên nhé. Anh quay lại công việc đây nhưng để lại chú sóc nhỏ em thử bấm vào bụng sóc xem sao</h1>
+        <h1>Dù là chuyện vui hay buồn cũng là chất liệu để trưởng thành mà, cố lên nhé cô gái. Em thử bấm vào bụng sóc xem sao</h1>
         <p>Nhấn vào chú sóc để bật nhạc nhé 🎵</p>
     </div>
     <div class='squirrel'>
